--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "module"]
 	path = module
 	url = ./module
+[submodule "geometry-module"]
+	path = geometry-module
+	url = https://github.com/OGKG/geometry-module.git
